--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Password Generator</title>
+    <title>Cipher Alchemist</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="manifest" href="manifest.json" />
+    <link rel="icon" href="favicon.ico" />
 </head>
 <body>
     <div class="container">
-        <h1>Password Generator</h1>
+        <h1>Cipher Alchemist</h1>
         <textarea id="phraseInput" placeholder="Enter your phrase here..."></textarea>
         <button id="generateBtn">Generate Password</button>
         <button id="copyBtn">Copy to Clipboard</button>
