Update app name,url,PWA,config,docs,service worker
This commit makes several key improvements to the application:

- Rename application from "Password Generator" to "Cipher Alchemist"
- Add proper PWA icons (192px and 512px versions)
- Update manifest.json with new app name and icon paths
- Revise service worker cache name to match new app identity
- Enhance README.md with detailed deployment instructions
- Update documentation to reflect the correct GitHub Pages URL
- Add author information to the footer
- Expand feature descriptions in documentation

These changes improve the application's branding, PWA capabilities,
and documentation clarity.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="passwordOutput"></div>
         <div id="strengthMeter"></div>
         <button id="themeToggleBtn">Toggle Theme</button>
-        <footer>Made by You</footer>
+        <footer>Made by Dhruivin Soni @dhruivinrsoni</footer>
     </div>
     <script src="scripts.js"></script>
 </body>
