--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="favicon.ico" />
 </head>
 <body>
+    <button id="themeToggleBtn" aria-label="Toggle theme">🌙</button>
     <div class="container">
         <h1>Cipher Alchemist</h1>
         <textarea id="phraseInput" placeholder="Enter your phrase here..."></textarea>
@@ -17,8 +18,10 @@
         <button id="downloadBtn">Download Cheat Sheet PDF</button>
         <div id="passwordOutput"></div>
         <div id="strengthMeter"></div>
-        <button id="themeToggleBtn">Toggle Theme</button>
-        <footer>Made by Dhruivin Soni @dhruivinrsoni</footer>
+        <footer>
+            Made by Dhruivin Soni @dhruivinrsoni<br />
+            Copyright (c) 2025 Dhruvin Rupesh Soni
+        </footer>
     </div>
     <script src="scripts.js"></script>
 </body>
