Fix name in main page and add icons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="passwordOutput"></div>
         <div id="strengthMeter"></div>
         <footer>
-            Made by Dhruivin Soni @dhruvinrsoni<br />
+            Made by Dhruvin Soni @dhruvinrsoni<br />
             Copyright (c) 2025 Dhruvin Rupesh Soni
         </footer>
     </div>
