feat: Add version tracking system and GitHub project link
Reason:
- Implement version tracking to provide transparency about which build users are interacting with
- Improve project discoverability by adding a link to the GitHub repository

Impact:
- Version information now displays in the footer of the application
- Automated GitHub Action will update version.txt on each commit to main
- Users can easily navigate to the project repository

Testing:
- Verified version.txt is properly displayed in the UI
- Confirmed GitHub Actions workflow updates version correctly on push

Note:
- Initial version is set to "dev" and will be updated by the workflow
- No breaking changes or new dependencies introduced

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <div id="strengthMeter"></div>
         <footer>
             Made by Dhruvin Soni @dhruvinrsoni<br />
+            <a href="https://dhruvinrsoni.github.io/cipher-alchemist/" target="_blank" rel="noopener">GitHub Project</a><br />
+            <span id="footer-version">Version: dev</span><br />
             Copyright (c) 2025 Dhruvin Rupesh Soni
         </footer>
     </div>
