refactor: improve version display and metadata handling
This commit implements a more robust version display system with the following improvements:

- Add meta tag in HTML for version injection during build time
- Refactor version display logic to first check meta tag, then fall back to version.txt
- Split version display into separate elements for better mobile presentation
- Simplify the format in update-version.yml workflow
- Restructure footer to prioritize version information

These changes make the version display more maintainable and create a clearer
separation between version metadata and attribution. The system now handles
both build-time injection and runtime fetching, improving reliability across
deployment scenarios.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="manifest" href="manifest.json" />
     <link rel="icon" href="favicon.ico" />
+    <meta name="app-version" content="__APP_VERSION__">
 </head>
 <body>
     <button id="themeToggleBtn" aria-label="Toggle theme">🌙</button>
@@ -19,10 +20,10 @@
         <div id="passwordOutput"></div>
         <div id="strengthMeter"></div>
         <footer>
-            Made by Dhruvin Soni @dhruvinrsoni<br />
-            <a href="https://dhruvinrsoni.github.io/cipher-alchemist/" target="_blank" rel="noopener">GitHub Project</a><br />
-            <span id="footer-version">Version: dev</span><br />
-            Copyright (c) 2025 Dhruvin Rupesh Soni
+            <span id="footer-version"></span><br />
+            <span id="footer-built" style="display:block;"></span>
+            Copyright (c) 2025 Dhruvin Rupesh Soni<br />
+            <a href="https://github.com/dhruvinrsoni/cipher-alchemist" target="_blank" rel="noopener">GitHub Project</a><br />
         </footer>
     </div>
     <script src="scripts.js"></script>
