refactor: update footer to use static attribution information
- Removed dynamic footer-built element and related JavaScript logic
- Added static attribution with GitHub profile link directly in HTML
- Simplified footer rendering by removing unnecessary DOM manipulations
- Improved footer appearance with clearer author attribution

This change maintains the same information display while reducing
JavaScript complexity and making the footer structure more maintainable.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <div id="strengthMeter"></div>
         <footer>
             <span id="footer-version"></span><br />
-            <span id="footer-built" style="display:block;"></span>
+            Built with ❤️ by Dhruvin Soni
+            (<a href="https://github.com/dhruvinrsoni" target="_blank" rel="noopener">@dhruvinrsoni</a>)<br />
             Copyright (c) 2025 Dhruvin Rupesh Soni<br />
             <a href="https://github.com/dhruvinrsoni/cipher-alchemist" target="_blank" rel="noopener">GitHub Project</a><br />
         </footer>
