--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
     <button id="themeToggleBtn" aria-label="Toggle theme">🌙</button>
     <div class="container">
         <h1>Cipher Alchemist</h1>
+        
+        <!-- App Description Section -->
+        <div class="app-description">
+            <p class="tagline">Transform memorable phrases into unbreakable passwords</p>            <p class="description">
+                Turn <strong class="example-phrase" onclick="tryExample()" title="Click to try this example!">"AhamBrahmasmi@108"</strong> into <code>4h4m8r4hm45m1@108</code> 
+                — combining Vedic wisdom, sacred numerology, and modern security.
+            </p>
+            <div class="features">
+                <span class="feature">🧠 Easy to remember</span>
+                <span class="feature">🔐 Cryptographically strong</span>
+                <span class="feature">✨ Creative & unique</span>
+                <span class="feature">📱 Works offline</span>
+            </div>
+        </div>
+        
         <textarea id="phraseInput" placeholder="Enter your phrase here..."></textarea>
         <button id="generateBtn">Generate Password</button>
         <button id="copyBtn">Copy to Clipboard</button>
