feat: implement collapsible UI sections for better user experience
Reason:
- Improve information organization and reduce visual clutter
- Enhance user experience by allowing content to be expanded/collapsed as needed

Changes:
- Added collapsible sections for app description and transformation steps
- Implemented keyboard navigation support for accessibility
- Enhanced styling with smooth animations and responsive design
- Updated the example transformation to show more complex output
- Added ARIA attributes for better screen reader support

Impact:
- Reduces initial cognitive load by hiding non-essential information
- Improves mobile experience by allowing users to focus on relevant content
- Enhances accessibility through keyboard navigation and ARIA support

Signed-off-by: Dhruvin Rupesh Soni <dhruvinrsoni@gmail.com>

--- a/index.html
+++ b/index.html
@@ -30,18 +30,24 @@
     <button id="themeToggleBtn" aria-label="Toggle theme">🌙</button>
     <div class="container">
         <h1>Cipher Alchemist</h1>
-        
-        <!-- App Description Section -->
-        <div class="app-description">
-            <p class="tagline">Transform memorable phrases into unbreakable passwords</p>            <p class="description">
-                Turn <strong class="example-phrase" onclick="tryExample()" title="Click to try this example!">"AhamBrahmasmi@108"</strong> into <code>4h4m8r4hm45m1@108</code> 
-                — combining Vedic wisdom, sacred numerology, and modern security.
-            </p>
-            <div class="features">
-                <span class="feature">🧠 Easy to remember</span>
-                <span class="feature">🔐 Cryptographically strong</span>
-                <span class="feature">✨ Creative & unique</span>
-                <span class="feature">📱 Works offline</span>
+          <!-- App Description Section -->
+        <div class="app-description-container">
+            <div class="app-description-header" onclick="toggleDescription()" aria-expanded="true" role="button" tabindex="0">
+                <span class="section-title">About Cipher Alchemist</span>
+                <span class="expand-icon" id="descriptionIcon">▼</span>
+            </div>
+            <div class="app-description-content" id="descriptionContent">
+                <p class="tagline">Transform memorable phrases into unbreakable passwords</p>
+                <p class="description">
+                    Turn <strong class="example-phrase" onclick="tryExample()" title="Click to try this example!">"AhamBrahmasmi@108"</strong> into <code>4#@/\/\8r@#/\/\@5/\/\!@ioB</code> 
+                    — combining Vedic wisdom, sacred numerology, and modern security.
+                </p>
+                <div class="features">
+                    <span class="feature">🧠 Easy to remember</span>
+                    <span class="feature">🔐 Cryptographically strong</span>
+                    <span class="feature">✨ Creative & unique</span>
+                    <span class="feature">📱 Works offline</span>
+                </div>
             </div>
         </div>
         
