refactor: standardize icon file naming to favicon prefix
Reason:
- Inconsistent icon naming convention between favicon.ico and icon-*.png files
- Need unified naming scheme for better file organization and clarity
- Align with standard favicon naming conventions

Changes:
- Updated icon-192.png references to favicon-192.png in all files
- Updated icon-512.png references to favicon-512.png in all files
- Modified index.html meta tags for OpenGraph and Twitter cards
- Updated manifest.json PWA icon sources
- Updated service-worker.js cache array with new icon paths

Impact:
- Improves file naming consistency across the project
- Maintains PWA functionality with proper icon references
- Ensures social media sharing uses correct icon paths
- No breaking changes to functionality or user experience

Files Modified:
- index.html: 3 icon reference updates
- manifest.json: 2 PWA icon source updates
- service-worker.js: 2 cache path updates

Compatibility:
- Requires renaming physical icon files to match new references
- No impact on existing functionality once files are renamed
- PWA installation and social sharing will work seamlessly

Signed-off-by: Dhruvin Rupesh Soni <dhruvinrsoni@gmail.com>

--- a/index.html
+++ b/index.html
@@ -13,17 +13,14 @@
     <meta name="application-name" content="Cipher Alchemist">
     <meta property="og:title" content="Cipher Alchemist - Secure Password Generator by Dhruvin Soni" />
     <meta property="og:description" content="A creative, secure phrase-to-password generator PWA. Portfolio of Dhruvin Soni." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://dhruvinrsoni.github.io/cipher-alchemist/" />
-    <meta property="og:image" content="https://dhruvinrsoni.github.io/cipher-alchemist/icon-512.png" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Cipher Alchemist - Secure Password Generator by Dhruvin Soni" />
+    <meta property="og:type" content="website" />    <meta property="og:url" content="https://dhruvinrsoni.github.io/cipher-alchemist/" />
+    <meta property="og:image" content="https://dhruvinrsoni.github.io/cipher-alchemist/favicon-512.png" />
+    <meta name="twitter:card" content="summary_large_image" />    <meta name="twitter:title" content="Cipher Alchemist - Secure Password Generator by Dhruvin Soni" />
     <meta name="twitter:description" content="A creative, secure phrase-to-password generator PWA. Portfolio of Dhruvin Soni." />
-    <meta name="twitter:image" content="https://dhruvinrsoni.github.io/cipher-alchemist/icon-512.png" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="manifest" href="manifest.json" />
+    <meta name="twitter:image" content="https://dhruvinrsoni.github.io/cipher-alchemist/favicon-512.png" />
+    <link rel="stylesheet" href="styles.css" />    <link rel="manifest" href="manifest.json" />
     <link rel="icon" href="favicon.ico" />
-    <link rel="apple-touch-icon" href="icon-192.png" />
+    <link rel="apple-touch-icon" href="favicon-192.png" />
     <meta name="app-version" content="__APP_VERSION__">
 </head>
 <body>
