docs: enhance website metadata and SEO optimization
Reason:
- Improve website discoverability and presentation in search results
- Align branding consistently with "@dhruvinrsoni" handle

Changes:
- Enhanced meta tags with more descriptive content and emojis
- Improved title and description for better SEO performance
- Refined social media sharing metadata for Twitter and Open Graph
- Reformatted HTML structure for better readability
- Cleared redundant content from git-commit-template.txt

Impact:
- Better search engine visibility and ranking potential
- Improved appearance when shared on social media platforms
- Clearer communication of the app's purpose and features

Signed-off-by: Dhruvin Rupesh Soni <dhruvinrsoni@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,23 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
-    <title>Cipher Alchemist</title>
-    <meta name="description" content="Cipher Alchemist: Secure, creative phrase-to-password generator PWA by Dhruvin Soni. Generate strong passwords, use offline, and enjoy a beautiful, modern portfolio experience." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>    <title>Cipher Alchemist - Transform Phrases into Unbreakable Passwords | @dhruvinrsoni</title>
+    <meta name="description" content="🔮 Cipher Alchemist: Turn memorable phrases into cryptographically strong passwords. Vedic wisdom meets modern security. By @dhruvinrsoni - PWA with offline support." />
     <meta name="theme-color" content="#007BFF" />
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Cipher Alchemist">
     <meta name="application-name" content="Cipher Alchemist">
-    <meta property="og:title" content="Cipher Alchemist - Secure Password Generator by Dhruvin Soni" />
-    <meta property="og:description" content="A creative, secure phrase-to-password generator PWA. Portfolio of Dhruvin Soni." />
-    <meta property="og:type" content="website" />    <meta property="og:url" content="https://dhruvinrsoni.github.io/cipher-alchemist/" />
+    <meta property="og:title" content="Cipher Alchemist - Transform Phrases into Unbreakable Passwords | @dhruvinrsoni" />
+    <meta property="og:description" content="🔮 Transform memorable phrases into cryptographically strong passwords. Vedic wisdom meets modern security. Created by @dhruvinrsoni" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dhruvinrsoni.github.io/cipher-alchemist/" />
     <meta property="og:image" content="https://dhruvinrsoni.github.io/cipher-alchemist/favicon-512.png" />
-    <meta name="twitter:card" content="summary_large_image" />    <meta name="twitter:title" content="Cipher Alchemist - Secure Password Generator by Dhruvin Soni" />
-    <meta name="twitter:description" content="A creative, secure phrase-to-password generator PWA. Portfolio of Dhruvin Soni." />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Cipher Alchemist - Transform Phrases into Unbreakable Passwords | @dhruvinrsoni" />
+    <meta name="twitter:description" content="🔮 Transform memorable phrases into cryptographically strong passwords. Vedic wisdom meets modern security. Created by @dhruvinrsoni" />
     <meta name="twitter:image" content="https://dhruvinrsoni.github.io/cipher-alchemist/favicon-512.png" />
-    <link rel="stylesheet" href="styles.css" />    <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="favicon-192.png" />
     <meta name="app-version" content="__APP_VERSION__">
