feat: Standardize icons and enhance branding
Reason:
- Improve consistency in icon naming for PWA compliance.
- Enhance project branding and documentation for better networking.

Changes:
- Standardized icon file names from `icon-*.png` to `favicon-*.png`.
- Updated page title and meta descriptions with engaging branding and `@dhruvinrsoni` handle.
- Enhanced PWA manifest with full descriptive name and added description field.
- Recreated README.md with modern documentation structure.
- Removed duplicate and obsolete icon files.

Impact:
- Improved branding consistency across the project.
- Enhanced user experience with better documentation and metadata.
- Simplified file structure by removing unnecessary files.

Test:
- Verified icon references in HTML, manifest.json, and service-worker.js.
- Validated syntax for all modified files.
- Checked for remaining `icon-` references; none found.

Docs:
- README.md completely rewritten with professional sections.
- Updated deployment and usage instructions.

Compatibility:
- No breaking changes; backward compatibility maintained.

Dependencies:
- No new dependencies introduced.

Signed-off-by: Dhruvin Rupesh Soni <dhruvinrsoni@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>    <title>Cipher Alchemist - Transform Phrases into Unbreakable Passwords | @dhruvinrsoni</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
+    <title>Cipher Alchemist - Transform Phrases into Unbreakable Passwords | @dhruvinrsoni</title>
     <meta name="description" content="🔮 Cipher Alchemist: Turn memorable phrases into cryptographically strong passwords. Vedic wisdom meets modern security. By @dhruvinrsoni - PWA with offline support." />
     <meta name="theme-color" content="#007BFF" />
     <meta name="mobile-web-app-capable" content="yes">
