🏗️ Complete modular release architecture implementation
✅ **Modular Architecture Complete**:
- Created 4 independent workflows: create-tag-release, deploy-by-version, rollback, deployment-status
- Removed redundant rollback-fixed.yml backup file
- Added comprehensive modular architecture documentation

🧹 **Project Simplification for v1.0.0**:
- Removed password strength analysis features for basic toolkit focus
- Updated all documentation to reflect actual v1.0.0 features
- Cleaned up temporary files (CHANGELOG_CLEAN.md, CHANGELOG_TEMP.md, test_commit_body.bat)

📚 **Comprehensive Documentation**:
- MODULAR-RELEASE-ARCHITECTURE.md - Complete architecture explanation
- RELEASE-v1.0.0.md - Detailed v1.0.0 release documentation
- SIMPLIFICATION-SUMMARY.md - Project simplification summary
- Updated README.md and CHANGELOG.md with actual features

🔧 **Enhanced Validation System**:
- validate-release.bat - Generic, version-independent validation
- release-v1.0.0.bat - Specific v1.0.0 validation reporting
- quick-release.bat - Release status and GitHub Actions guidance

🕐 **IST Timezone Support**:
- Updated version.txt with IST timezone format
- All workflows support Asia/Kolkata timezone

🎯 **Ready for First Modular Release Test**:
- Architecture: ✅ Complete (306+204+176+97 lines of workflows)
- Documentation: ✅ Comprehensive
- Validation: ✅ Full validation scripts
- Cleanup: ✅ All temporary files removed

Next: Test end-to-end modular workflow with v1.0.0 release

[release-architecture]

--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@
         
         <textarea id="phraseInput" placeholder="Enter your phrase here..."></textarea>
         <button id="generateBtn">Generate Password</button>
-        <button id="copyBtn">Copy to Clipboard</button>
-        <button id="downloadBtn">Download Cheat Sheet PDF</button>
+        <button id="copyBtn">Copy to Clipboard</button>        <button id="downloadBtn">Download Cheat Sheet PDF</button>
         <div id="passwordOutput"></div>
-        <div id="strengthMeter"></div>
         <hr style="margin:2rem 0 1rem 0; border:0; border-top:1px solid #e0e0e0;" />
         <footer>
             <span id="footer-version" aria-live="polite"></span><br />
