refactor: implement modular architecture for improved maintainability
Reason:
- Restructured codebase from monolithic files to a clean, feature-based modular architecture
- Original implementation had all code in single JS/CSS files, making maintenance difficult

Changes:
- Split monolithic CSS into 4 focused modules:
     * themes.css - Theme system & CSS variables
     * main.css - Core layout & base styles
     * password-strength.css - Strength meter styling
     * phrase-suggestions.css - Suggestion UI styles
- Split monolithic JS into 4 functional modules:
     * cipher-algorithms.js - Password generation logic
     * password-strength.js - Strength analysis system
     * phrase-suggestions.js - Suggestion management
     * main.js - App initialization & core logic
- Updated index.html to reference modular files
- Preserved original files as backups (scripts.js, styles.css)
- Updated documentation to reflect new architecture

Impact:
- Improved maintainability with separation of concerns
- Enhanced code organization through smaller, focused files
- Better developer experience for future feature development
- Potential performance gains via parallel CSS loading
- Easier debugging by isolating issues to specific modules

Test:
- Verified all functionality works identically to the monolithic version
- Tested across different screen sizes for responsive behavior
- Validated theme switching, password generation, and strength analysis

Compatibility:
- No breaking changes - functionality remains identical
- Original files preserved as backups with warning headers

Signed-off-by: Dhruvin Rupesh Soni <dhruvinrsoni@gmail.com>

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://dhruvinrsoni.github.io/cipher-alchemist/" />
     <meta property="og:image" content="https://dhruvinrsoni.github.io/cipher-alchemist/favicon-512.png" />    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Cipher Alchemist - Transform Phrases into Unbreakable Passwords | @dhruvinrsoni" />
-    <meta name="twitter:description" content="🔮 Transform memorable phrases into cryptographically strong passwords with real-time strength analysis. Vedic wisdom meets modern security. Created by @dhruvinrsoni" />
+    <meta name="twitter:title" content="Cipher Alchemist - Transform Phrases into Unbreakable Passwords | @dhruvinrsoni" />    <meta name="twitter:description" content="🔮 Transform memorable phrases into cryptographically strong passwords with real-time strength analysis. Vedic wisdom meets modern security. Created by @dhruvinrsoni" />
     <meta name="twitter:image" content="https://dhruvinrsoni.github.io/cipher-alchemist/favicon-512.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <!-- Modular CSS Files -->
+    <link rel="stylesheet" href="css/themes.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/password-strength.css" />
+    <link rel="stylesheet" href="css/phrase-suggestions.css" />
     <link rel="manifest" href="manifest.json" />
     <link rel="icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="favicon-192.png" />
@@ -79,7 +82,10 @@
             <small>Copyright (c) 2025 Dhruvin Rupesh Soni</small><br />
             <a href="https://github.com/dhruvinrsoni/cipher-alchemist" target="_blank" rel="noopener">GitHub Project</a><br />
         </footer>
-    </div>
-    <script src="scripts.js" defer></script>
+    </div>    <!-- Modular JavaScript Files -->
+    <script src="js/cipher-algorithms.js" defer></script>
+    <script src="js/password-strength.js" defer></script>
+    <script src="js/phrase-suggestions.js" defer></script>
+    <script src="js/main.js" defer></script>
 </body>
 </html>
