--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 </head>
 <body>    <!-- Skip to main content for accessibility -->
     <a href="#main-content" class="skip-to-main">Skip to main content</a>
-    
-    <!-- Top-right controls -->
+      <!-- Top-right controls -->
     <div class="top-controls">
+        <button id="installBtn" aria-label="Install app as PWA" title="Install Cipher Alchemist" style="display: none;">📱</button>
         <button id="keyboardHelpBtn" aria-label="Show keyboard shortcuts (Ctrl+?)" title="Keyboard shortcuts (Ctrl+?)">⌨️</button>
         <button id="themeToggleBtn" aria-label="Toggle theme">🌙</button>
     </div>
@@ -105,6 +105,10 @@
                         </div>                        <div class="shortcut-item">
                             <span class="shortcut-keys">Ctrl + C</span>
                             <span class="shortcut-desc">Copy password (when focused)</span>
+                        </div>
+                        <div class="shortcut-item">
+                            <span class="shortcut-keys">📱 Button</span>
+                            <span class="shortcut-desc">Install as PWA app</span>
                         </div>
                         <div class="shortcut-item">
                             <span class="shortcut-keys">Ctrl + ? / F1</span>
